# project1

./: .dockerignore  .env.example  .gitignore  BLACKWELL_NOTES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.app.yml  docker-compose.yml  pyproject.toml  requirements.lock-cu13-blackwell.txt
.github/: PULL_REQUEST_TEMPLATE.md
agent/: __init__.py  graph.py  state.py
api/: __init__.py  auth.py  main.py  ratelimit.py
common/: __init__.py  config.py
configs/: eval.yaml  lora.yaml  model.yaml  retrieval.yaml  server.yaml
docs/: AUDIT.md  REPRODUCIBILITY.md
eval/: README.md  __init__.py  bootstrap.py  gate.py  harness.py  metrics.py  passk.py  rag_triad.py  report.py  results.py  run_bfcl.py  run_tau2.py  stats.py  tasks.py  zh_service_desk.py
finetune/: __init__.py  build_sft_data.py  train_grpo.py  train_lora.py
frontend/: Dockerfile  README.md  app.py
observability/: README.md  __init__.py  prompts.py  tracing.py
rag/: __init__.py  embeddings.py  index.py  ingest.py  pipeline.py  rerank.py  retrieve.py  text.py
report/: CHANGES.md  case_study.md  improvement_plan.md  one_pager.md  resume_bullets.md  technical_report.md
requirements/: eval.txt  rag.txt  train.txt
results/: README.md  zh_base.json  zh_base_detailed.json  zh_base_final_detailed.json  zh_lora_4ep_balanced_detailed.json  zh_lora_4ep_stage2_detailed.json  zh_lora_72ep_detailed.json  zh_lora_detailed.json  zh_lora_final_detailed.json  zh_lora_regularized_detailed.json  zh_lora_stage2_toolrequired_detailed.json  zh_paired_final.json  zh_paired_final.md  zh_paired_regularized.json  zh_paired_regularized.md
scripts/: deploy.sh  gpu_run.sh  quickstart.sh
serving/: __init__.py  client.py  litellm_config.yaml  sglang_server.sh  vllm_server.sh
tests/: test_agent.py  test_api.py  test_bootstrap.py  test_client.py  test_configs.py  test_deploy.py  test_eval.py  (+13 more)
(+22 files in other folders)
